fix bottom align for cards

--- a/css/style2.css
+++ b/css/style2.css
@@ -206,7 +206,7 @@ input:focus {
 
 label {
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: 700;
 }
 
